[package]
name = "fts-launcher"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "FastTrackStudios launcher for Reaper — audio production workflow launcher"
repository = "https://github.com/FastTrackStudios/fts-launcher"

[features]
default = ["native"]
desktop = ["dep:dioxus", "launcher-ui/desktop"]
native = ["dep:dioxus-native", "dep:winit", "launcher-ui/native"]

[dependencies]
# Core launcher engine and UI (use local path for development, switch to git for release)
launcher-core = { path = "../dioxus-launcher/crates/launcher-core" }
launcher-ui = { path = "../dioxus-launcher/crates/launcher-ui", default-features = false }
providers = { path = "../dioxus-launcher/crates/providers" }

# Renderers
dioxus = { version = "0.7", features = ["desktop"], optional = true }
dioxus-native = { git = "https://github.com/FastTrackStudios/blitz", features = ["prelude"], optional = true }
winit = { version = "=0.31.0-beta.2", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
facet = "0.44"
facet-styx = "3.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
