[package]
name = "fts-launcher"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "FastTrackStudios launcher for Reaper — audio production workflow launcher"
repository = "https://github.com/FastTrackStudios/fts-launcher"

[lib]
name = "fts_launcher"
path = "src/lib.rs"

[[bin]]
name = "fts-launcher-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = ["native"]
native = ["launcher-ui/native"]
desktop = ["launcher-ui/desktop"]
standalone = ["native", "dep:winit", "dep:tracing-subscriber"]

[dependencies]
# Core launcher engine and UI — always included
launcher-core = { path = "../dioxus-launcher/crates/launcher-core" }
launcher-ui = { path = "../dioxus-launcher/crates/launcher-ui", default-features = false }
providers = { path = "../dioxus-launcher/crates/providers" }

# Dioxus native renderer (Blitz) — pulled in via launcher-ui/native feature
dioxus-native = { git = "https://github.com/FastTrackStudios/blitz", features = ["prelude"] }

# DAW API (safe Rust, async, generic)
daw = { path = "../daw/crates/daw" }

# Standalone binary deps (optional)
winit = { version = "=0.31.0-beta.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
facet = "0.44"
facet-styx = "3.0"

# Logging
tracing = "0.1"
